src/chrome/komodo/skin/plat/gnome/platform.css
@import url("chrome://komodo/skin/tabs/tabs.css");

@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

tabpanels,
tabpanel
{
  -moz-appearance: none;
  border: None;
  padding: 0px;
  margin: 0px;
}

/*
 * Problem with toolbar buttons showing the checked state on linux.
 * See bug: http://bugs.activestate.com/show_bug.cgi?id=64328
 */
toolbarbutton {
  -moz-appearance: none !important;
}

/* Fix disabled autocomplete-textbox styling on Linux and Vista (bug 75996).
 * 
 * Only *specifically* doing this for non-MacOSX and for textboxes of
 * type autocomplete because for those other cases the result is a
 * properly colored hbox inside the textbox **with a white border area
 * around it that I am unable to style**.
 *
 * As well, on Mac OS X the border of the textbox is the standard (albeit
 * subtle) distinguishing UI for the readonly-ness of the textbox. The
 * current XUL theme handles that already.
 */
textbox[type="autocomplete"][disabled="true"] > hbox {
  background-color: -moz-Dialog;
}

